# cmakeStu

./: README.md
chapter_02/: CMakeLists.txt  cmakeStuConfig.h.in  main.c
chapter_03/: CMakeLists.txt  main.c
chapter_03/MathFunctions/: MathFunctions.c  MathFunctions.h
chapter_04_test/: CMakeLists.txt  main.c
chapter_04_test/MathFunctions/: CMakeLists.txt
